--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: python
 python:
   - "3.4"
-script: python manage.py test && flake8 --exclude polls/migrations/,manage.py  .
+script:
+  - python manage.py test
+  - flake8 --exclude polls/migrations/,manage.py  .
