--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,12 +45,12 @@ jobs:
           command: |
             . venv/bin/activate
             python manage.py test
-            flake8 --exclude polls/migrations/,manage.py,.venv  .
+            flake8 --exclude polls/migrations/,manage.py,./venv  .
 
       - store_artifacts:
           path: test-reports
           destination: test-reports
-          
+
     deployment:
       staging:
         branch: master
