--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,11 +50,11 @@ jobs:
       - store_artifacts:
           path: test-reports
           destination: test-reports
-          
+
       - run: bash .circleci/setup-heroku.sh
       - add_ssh_keys:
           fingerprints:
-            - "48:a0:87:54:ca:75:32:12:c6:9e:a2:77:a4:7a:08:a4"
+            - "SHA256:JTQVZziolTMFR2xmSZW/PzNNpWq7pSEMfFdbPDZ9IbU H4D3S@Marvin"
       - deploy:
           name: Deploy Master to Heroku
           command: |
