--- a/circleci.yml
+++ b/circleci.yml
@@ -1,10 +1,16 @@
 machine:
   python:
-    version: pypy-3.6
+    version: 3.5.1
+
+dependencies:
+  post:
+    - pip install -U -r dev-requirements.txt
+
 test:
   override:
-    - flake8 --exclude polls/migrations/,manage.py  .
     - python manage.py test
+    - flake8 --exclude polls/migrations/,manage.py  .
+
 deployment:
   staging:
     branch: master
