migrate on circle ci

--- a/circle.yml
+++ b/circle.yml
@@ -12,3 +12,5 @@ deployment:
     branch: master
     heroku:
       appname: gcs01-marceloabk-circle
+    commands:
+      - heroku run python manage.py migrate --app gcs01-marceloabk-circle
